css/global.css
/* ... */
/* #endregion */

/* #region Game styles */
d-box, d-choices {
	&:not(:state(compact)) {
		/* Space out
		 * Increase spacing between neighboring boxes to account for border outset */
		margin: 0.2em 0.5em;
		:is(p, ul, ol) + & { margin-block-start: 0.5em }
		&:has(+ h2, + h3, + h4, + h5, + h6) { margin-block-end: 1em }

		padding: 0.1em 0.2em;
		font-size: 1.2em;
		line-height: 1;
		min-height: var(--baseheight);
		width: var(--basewidth);
		max-width: calc(100% - var(--border-width));
		background-color: var(--black);
		background-clip: padding-box;
		border: var(--border-width) solid transparent;
		border-image: url("../assets/images/textbox/light.png") 16 / var(--border-width);
		body.dim &:not([theme]), body.dim &[theme=light] { border-image-source: url("../assets/images/textbox/light_dim.png") }

		&[theme=dark], &[theme^=power], &[theme^=shop] {
			border-image-source: url("../assets/images/textbox/dark.gif");
			body.dim & { border-image-source: url("../assets/images/textbox/dark_dim.gif") }
		}

		&[theme=plain], &[theme^=obj], &[theme=battlemenu], &[theme=battledesc] {
			border-image-source: url("../assets/images/textbox/plain.png");
		}

		&[theme^=obj], &[theme=battlemenu] { width: calc(var(--basewidth) + 4em) }

		&[theme^=obj], &[theme^=power], &[theme=battledesc], &[theme=shopdesc] {
			font-family: "DeltaFont Condensed", var(--font);
		}

		&[theme=objreact] {
			display: flex;
			align-items: center;
			min-height: unset;
			width: calc(var(--basewidth + 6em));
			padding: 0;

			d-speaker {
				display: block;
				font-size: 0;

				&::before {
					content: "";
					display: block;
					margin: -0.5rem 0;
					--size: 2rem;
					width: var(--size);
					height: var(--size);
					background: center / contain no-repeat;
				}

				&.kris::before { background-image: url("../assets/images/faces/kris/battle.png") }
				&.susie::before { background-image: url("../assets/images/faces/susie/battle.png") }
				&.ralsei::before { background-image: url("../assets/images/faces/ralsei/battle.png") }
				&.noelle::before { background-image: url("../assets/images/faces/noelle/battle.png") }
			}

			d-text { margin-inline-start: 1ch }
		}

		&[theme=powertitle] { width: calc(var(--basewidth) - 11.4em) }

		&[theme=battledesc] {
			width: calc(var(--basewidth) - 17em);
			color: var(--gray);
		}

		&[theme=battletalk] {
			--border-width: 0.375em;
			border-image-source: url("../assets/images/textbox/bubble.png");
			body.dim & { border-image-source: url("../assets/images/textbox/bubble_dim.png") }
			border-image-slice: 6;
			min-height: unset;
			margin: 0.5em 1em;
			width: fit-content;
			display: flex;
			flex-direction: column;
			background-color: var(--white);
			color: var(--black);
			font-family: "DeltaFont Combat", var(--font);
			font-size: 1em;

			d-speaker {
				color: #966200;
				display: block;
				margin-block-end: 0.4em;

				&.kris { color: #3b4380 } /* blended for readability from too-dark DW hair #0b0b3b and too-light DW shadow #6a7bc4 */
				&.susie { color: #88176a }
				&.ralsei { color: #38705e }
				&.noelle { color: #b15d34 } /* darkened for readability from LW skintone #d87d50*/
				&.berdly { color: #36394b }
				&.lancer, &.king { color: #406080 }
				&.queen { color: #1263bc }
			}
		}

		&[theme=shopleft] { width: calc(var(--basewidth) - 7.2em) }

		&[theme=shopright], &[theme=shopdesc] { width: calc(var(--basewidth) - 14.2em) }

		&[theme=shopright] { padding-inline: 0.4em }

		&[theme=fade] {
			border: unset;
			min-height: calc(var(--baseheight) - 2em);
			width: calc(var(--basewidth) - 2em);
			max-width: calc(100% - 3 * var(--border-width));

			margin: calc(var(--border-width) + 0.2em) calc(var(--border-width) + 0.5em);
			:is([theme=fade]) + & { margin-block-start: calc((2 * var(--border-width)) + 0.2em) }
			:is(h2, h3, h4, h5, h6, p, ul, ol) + & { margin-block-start: calc(var(--border-width) + 1rem) }
			&:has(+ h2, + h3, + h4, + h5, + h6, + p, + ul, + ol) { margin-block-end: calc(var(--border-width) + 1rem) }

			box-shadow:
				0 0
				var(--border-width)	/* blur a lot */
				calc(0.5 * var(--border-width))	/* spread out a bit */
				var(--black);
		}

		&.hideoverflow {
			white-space: pre;
			max-width: 100%;
			overflow: hidden;
		}

		@media (max-width: 30em) {
			font-size: 1em;

			/* For boxes with small dialogues, add spacing so dialogue doesn't overlap. ...too much, at least. */
			&:has(d-box) { min-height: 6.5em }
		}

		/* Forced line break */
		.break { display: block }

		img {
			&:is(.fullheight, .fullwidth) { display: block}
			&.fullheight {
				height: 100%;
				grid-row: 1 / span 3;
			}
			&.fullwidth {
				width: 100%;
				grid-column: 1 / span 2;
				
				&.center { justify-self: center }
			}
			&.fullwidth.fullheight { object-fit: contain }
		}
	}

	&:state(compact) {
		margin: 0 0 0 min(1em, 3vw);
		gap: 0 0.5ch;
		align-items: baseline;

		/* On smaller screens, stack dialogue instead */
		@media (max-width: 30rem) {
			display: flex;
			flex-direction: column;

			/* ...but only main dialogue! if there are boxes with only small dialogue, leave them alone. */
			&:has(d-text) {
				padding-inline-start: 3vw;
				& > d-speaker, & > d-sprite d-speaker {
					position: relative;
					left: -3vw;
				}
			}

			d-text ~ d-box { padding-inline-start: 3ch }
		}
	}
}
/* ... */

